<resources>
  <string name="app_name">Spotify Clone</string>
  <string name="login">Login</string>
  <string name="logout">Logout</string>
  <string name="username">Username</string>
  <string name="email">Email</string>
  <string name="password">Password</string>
  <string name="register">Register</string>
  <string name="text_sign_up">Sign Up</string>
  <string name="text_e_mail">E Mail</string>
  <string name="text_register">Register</string>
  <string name="text_phone">Phone</string>
  <string name="text_first_name">First Name</string>
  <string name="text_last_name">Last Name</string>
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="music">Music</string>
  <string name="search">Search</string>
  <string name="account">Account</string>
  <string name="notification_channel_name">Music Channel</string>
  <string name="notification_channel_description">Shows the currently playing music</string>
  <string name="ticker_text">Ticker</string>
  <string name="notification_title">Spotify Clone</string>
  <string name="notification_message">Playing song</string>
  <string name="channel_name">Media Playback</string>
  <string name="channel_description">Playing Audio Tracks</string>
</resources>